--- a/FightCorona.DataCollector.Service/FightCorona.DataCollector.Service.csproj
+++ b/FightCorona.DataCollector.Service/FightCorona.DataCollector.Service.csproj
@@ -7,8 +7,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{328A71B5-623F-4976-89B2-633B381EF15E}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>FightCorona.DataCollector</RootNamespace>
-    <AssemblyName>FightCorona.DataCollector</AssemblyName>
+    <RootNamespace>FightCorona.DataCollector.Service</RootNamespace>
+    <AssemblyName>FightCorona.DataCollector.Service</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -70,15 +70,14 @@
     <Compile Include="ProjectInstaller.Designer.cs">
       <DependentUpon>ProjectInstaller.cs</DependentUpon>
     </Compile>
-    <Compile Include="Service1.cs">
+    <Compile Include="DataCollectorService.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="Service1.Designer.cs">
-      <DependentUpon>Service1.cs</DependentUpon>
+    <Compile Include="DataCollectorService.Designer.cs">
+      <DependentUpon>DataCollectorService.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="StatisticsInformation.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -90,6 +89,10 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\FightCorona.DataCollector.Business\FightCorona.DataCollector.Business.csproj">
+      <Project>{DC5BEB2E-4EFF-4860-AFBA-6EDA0EC7A8D6}</Project>
+      <Name>FightCorona.DataCollector.Business</Name>
+    </ProjectReference>
     <ProjectReference Include="..\FightCorona.DataCollector.Data\FightCorona.DataCollector.Data.csproj">
       <Project>{65E1B932-782E-4084-9FAC-AE3B6E08BC0A}</Project>
       <Name>FightCorona.DataCollector.Data</Name>
